--- a/src/main/resources/static/app/directives/view/brackets.team.template.html
+++ b/src/main/resources/static/app/directives/view/brackets.team.template.html
@@ -11,5 +11,5 @@
             <span ng-switch-default><team data="match.awayTeam"/><strong>{{match.result.awayTeamGoals}}</strong></span>
         </span>
     </div>
-    <div class="m_dtls"><span>{{match.kickoff | date : 'MMM d, HH:mm'}}</span></div>
+    <div class="m_dtls"><span>{{match.kickoff | date : 'dd MMM yy, HH:mm'}}</span></div>
 </div>
