--- a/src/main/resources/static/app/bets/view/bets.groups.view.html
+++ b/src/main/resources/static/app/bets/view/bets.groups.view.html
@@ -15,7 +15,8 @@
                 <table class="table table-hover table-condensed">
                     <thead>
                     <tr>
-                        <th scope="col"></th>
+                        <th style="width: 3px;"></th>
+                        <th scope="col">Team</th>
                         <th scope="col" title="Game Played">P</th>
                         <th scope="col" title="Games Won">W</th>
                         <th scope="col" title="Draw">D</th>
@@ -30,6 +31,9 @@
                     <tr ng-repeat-start="teamInGroup in prepareTeamsInGroup(group.teamsInGroup)"
                         data-toggle="collapse"
                         data-target="#team-{{teamInGroup.team.code}}-matches" style="cursor: pointer;">
+                        <td style="padding: 0px;">
+                            <div ng-if="$index == 0 || $index == 1" style="width: 3px; height:45px; background-color:#4285F4"></div>
+                        </td>
                         <td><team data="teamInGroup.team"/></td>
                         <td>{{teamInGroup.gamesPlayed }}</td>
                         <td>{{teamInGroup.gamesWon }}</td>
@@ -51,6 +55,13 @@
                 </table>
             </div>
         </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div  style="padding:10px; height: 44px; border-left: 3px solid #4285F4;">Advance to Next Round</div>
+            </div>
+        </div>
+
 
     </div>
 </section>
