--- a/src/main/resources/static/app/bets/view/bets.matches.html
+++ b/src/main/resources/static/app/bets/view/bets.matches.html
@@ -1,3 +1,42 @@
+<style>
+.ss-wp-tnp {
+    width: 100%;
+    line-height: 12px;
+    margin-bottom: 8px;
+}
+.ss-wp-tnr {
+    font-size: 12px;
+    line-height: 16px;
+}
+.ss-wp-ft {
+    text-align: left;
+    width: 33%;
+}
+.ss-wp-d {
+    text-align: center;
+    width: 33%;
+}
+.ss-wp-st {
+    text-align: right;
+    width: 33%;
+}
+.ss-wp-tp {
+    font-size: 14px;
+}
+.ss-wp-dp {
+    text-align: center;
+    color: #70757a;
+}
+.ss-wp-br {
+    height: 8px;
+}
+.ss-wp-b {
+    width: 100%;
+}
+.ss-wp-bc {
+    transition: width 0.3s;
+}
+</style>
 <section id="bets-matches" permission="['ROLE_USER']">
     <h1>Set bets for games
         <small>Only you can see your bets</small>
@@ -46,45 +85,7 @@
                 </div>
 
 
-                <style>
-                    .ss-wp-tnp {
-                        width: 100%;
-                        line-height: 12px;
-                        margin-bottom: 8px;
-                    }
-                    .ss-wp-tnr {
-                        font-size: 12px;
-                        line-height: 16px;
-                    }
-                    .ss-wp-ft {
-                        text-align: left;
-                        width: 33%;
-                    }
-                    .ss-wp-d {
-                        text-align: center;
-                        width: 33%;
-                    }
-                    .ss-wp-st {
-                        text-align: right;
-                        width: 33%;
-                    }
-                    .ss-wp-tp {
-                        font-size: 14px;
-                    }
-                    .ss-wp-dp {
-                        text-align: center;
-                        color: #70757a;
-                    }
-                    .ss-wp-br {
-                        height: 8px;
-                    }
-                    .ss-wp-b {
-                        width: 100%;
-                    }
-                    .ss-wp-bc {
-                        transition: width 0.3s;
-                    }
-                </style>
+
                 <div class="form-group">
                     <label class="control-label col-sm-2">Bet Statistics:</label>
                     <div class="col-sm-10">
@@ -161,7 +162,7 @@
                 </div>
 
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-4">
+                    <div class="`col-sm-offset-2` col-sm-4">
                         <p class="form-control-static">
                             <a role="button" data-ng-click="scrollMatches('prev')">Previous Match</a>
                             {{selected.match.matchId}}
