--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -1,12 +1,12 @@
 <div class="panel panel-default" style="margin: 10px;"
      ng-repeat="match in matches | orderBy: 'kickoff'">
 
-    <div class="panel-heading">
-        <div>{{match.kickoff | date : 'dd MMM yy, HH:mm'}}, Match {{match.matchId}}, {{match.stageId}} {{match.groupId}}</div>
+    <div class="panel-heading" title="Match number {{match.matchId}}">
+        <div>{{match.kickoff | date : 'dd MMM yy, HH:mm'}}, {{match.stageId}} {{match.groupId}}</div>
     </div>
 
     <div class="panel-body">
-        <div class="row>">
+        <div class="row">
           <div class="col-sm-10">
             <div class="row">
               <div class="col-xs-8 col-sm-6">
