--- a/src/main/resources/static/app/bets/view/bets.qualifier.html
+++ b/src/main/resources/static/app/bets/view/bets.qualifier.html
@@ -17,7 +17,7 @@
         </div>
 
         <div id="qualifiers-container">
-            <table class="table table-bordered">
+            <table class="table table-bordered" style="background-color: #EEEEEE;">
                 <tr>
                     <th>Round of 16</th>
                     <th>Quarter-finals</th>
