--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -6,7 +6,7 @@ html {
 body {
     min-height: 500px;
     padding-top: 80px;
-    background: #fff url(/images/grass_bg.jpg) repeat-x center 0;
+    background: #fff url(/images/grass_bg_1.jpg) repeat center 0;
 }
 
 .main {
