--- a/src/main/resources/static/app/bets/view/bets.matches.html
+++ b/src/main/resources/static/app/bets/view/bets.matches.html
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="form-group">
-                    <div class="`col-sm-offset-2` col-sm-4">
+                    <div class="col-sm-offset-2 col-sm-4">
                         <p class="form-control-static">
                             <a role="button" data-ng-click="scrollMatches('prev')">Previous Match</a>
                             {{selected.match.matchId}}
