--- a/src/main/resources/static/app/bets/view/bets.overview.html
+++ b/src/main/resources/static/app/bets/view/bets.overview.html
@@ -6,7 +6,7 @@
         <div class="panel panel-default">
             <div class="panel-body">
                 <div><span class="bg-info">&nbsp;&nbsp;</span> Bet Result</div>
-                <div><span class="bg-success">&nbsp;&nbsp;</span> Points Gamed</div>
+                <div><span class="bg-success">&nbsp;&nbsp;</span> Points Gained</div>
             </div>
         </div>
 
